tests/paczka2/big_fuzzy/23579530.err
Error in line 2: zL7ek S979 79,1
Error in line 5: S10 A387 73,8
Error in line 13: dRgeva S10 35,81
Error in line 11: dRgeva S492 4,3
Error in line 16: zL7ek A387 31,0
Error in line 28: aHfkOcMN S979 44,67
Error in line 25: zL7ek S979 90,6
Error in line 48: aHfkOcMN S979 131,8
Error in line 60: QnfK S10 48,0
Error in line 61: aHfkOcMN A387 17,5
Error in line 71: S10 S10 -3,6
Error in line 66: aHfkOcMN S979 65,2
Error in line 74: aHfkOcMN A387 83,6
Error in line 82: aHfkOcMN S492 45,9
Error in line 76: zL7ek S492 48,0
Error in line 87: QnfK S10 21,0
Error in line 89: aHfkOcMN S10 11,3
Error in line 85: zL7ek S10 4,9
Error in line 103: QnfK S492 12,48
Error in line 90: QnfK S492 76,7
Error in line 105: QnfK A387 39,1
Error in line 111: orM S10 21,6
Error in line 113: S10 S492 15,1
Error in line 121: FnFkFaCi S10 54,38
Error in line 126: FnFkFaCi S979 86,5
Error in line 130: FnFkFaCi S10 152,66
Error in line 120: zL7ek S492 57,8
Error in line 131: zL7ek A387 11,6
Error in line 133: QnfK S979 98,4
Error in line 125: orM S10 92,0
Error in line 136: FnFkFaCi S10 11,8
Error in line 132: zL7ek S492 26,9
Error in line 159: S10 S979 2,09
Error in line 157: S10 S492 85,8
Error in line 155: zL7ek S979 92,6
Error in line 160: S10 S979 6,0
Error in line 173: FnFkFaCi S492 30,9
Error in line 179: orM S492 12,2
Error in line 186: FnFkFaCi S979 77,9
Error in line 208: orM S10 155,91
Error in line 206: S10 S492 94,6
Error in line 211: QnfK S10 76,1
Error in line 202: dRgeva A387 1,0
Error in line 223: zLek S492 92,4
Error in line 221: FnFkFaCi S979 37,2
Error in line 238: dRgeva S979 54,8
Error in line 244: FnFkFaCi S492 79,79
Error in line 236: FnFkFaCi S10 28,5
